hw3/y.output
   0  $accept : start_point $end

   1  $$1 :

   2  start_point : TYPESPEC IDENTIFIER $$1 '(' ')' '{' xdecls stmts RETURN CONSTANT ';' '}'

   3  xdecls :
   4         | decls

   5  decls : decl
   6        | decls decl

   7  decl : TYPESPEC notype_declarator ';'

   8  notype_declarator : IDENTIFIER '=' INT_CONSTANT

   9  INT_CONSTANT : CONSTANT

  10  stmt_list :
  11            | stmts

  12  stmts : stmt
  13        | stmts stmt

  14  stmt : simple_stmt
  15       | IF_Statement
  16       | While_Statement

  17  $$2 :

  18  $$3 :

  19  While_Statement : WHILE $$2 '(' Expression ')' $$3 Compound_Statement

  20  $$4 :

  21  IF_Statement : IF '(' Expression ')' $$4 Compound_Statement Selection_Statement_Tail

  22  Selection_Statement_Tail :

  23  $$5 :

  24  Selection_Statement_Tail : ELSE $$5 Compound_Statement

  25  $$6 :

  26  $$7 :

  27  Compound_Statement : '{' $$6 xdecls $$7 stmt_list '}'

  28  Expression : Logical_Expression

  29  Logical_Expression : add_expr
  30                     | Logical_Expression OR_OP add_expr
  31                     | Logical_Expression AND_OP add_expr
  32                     | NOT_OP Logical_Expression
  33                     | Logical_Expression '<' add_expr
  34                     | Logical_Expression LE_OP add_expr
  35                     | Logical_Expression '>' add_expr
  36                     | Logical_Expression GE_OP add_expr
  37                     | Logical_Expression EQUAL_OP add_expr
  38                     | Logical_Expression NEQUAL_OP add_expr

  39  simple_stmt : IDENTIFIER '=' add_expr ';'

  40  add_expr : mul_expr
  41           | add_expr '+' mul_expr
  42           | add_expr '-' mul_expr

  43  mul_expr : primary_expr
  44           | mul_expr '*' primary_expr
  45           | mul_expr '/' primary_expr

  46  primary_expr : IDENTIFIER
  47               | CONSTANT
  48               | '(' Expression ')'

  49  primary : IDENTIFIER
  50          | CONSTANT

state 0
	$accept : . start_point $end  (0)

	TYPESPEC  shift 1
	.  error

	start_point  goto 2


state 1
	start_point : TYPESPEC . IDENTIFIER $$1 '(' ')' '{' xdecls stmts RETURN CONSTANT ';' '}'  (2)

	IDENTIFIER  shift 3
	.  error


state 2
	$accept : start_point . $end  (0)

	$end  accept


state 3
	start_point : TYPESPEC IDENTIFIER . $$1 '(' ')' '{' xdecls stmts RETURN CONSTANT ';' '}'  (2)
	$$1 : .  (1)

	.  reduce 1

	$$1  goto 4


state 4
	start_point : TYPESPEC IDENTIFIER $$1 . '(' ')' '{' xdecls stmts RETURN CONSTANT ';' '}'  (2)

	'('  shift 5
	.  error


state 5
	start_point : TYPESPEC IDENTIFIER $$1 '(' . ')' '{' xdecls stmts RETURN CONSTANT ';' '}'  (2)

	')'  shift 6
	.  error


state 6
	start_point : TYPESPEC IDENTIFIER $$1 '(' ')' . '{' xdecls stmts RETURN CONSTANT ';' '}'  (2)

	'{'  shift 7
	.  error


state 7
	start_point : TYPESPEC IDENTIFIER $$1 '(' ')' '{' . xdecls stmts RETURN CONSTANT ';' '}'  (2)
	xdecls : .  (3)

	TYPESPEC  shift 8
	IDENTIFIER  reduce 3
	IF  reduce 3
	WHILE  reduce 3

	xdecls  goto 9
	decls  goto 10
	decl  goto 11


state 8
	decl : TYPESPEC . notype_declarator ';'  (7)

	IDENTIFIER  shift 12
	.  error

	notype_declarator  goto 13


state 9
	start_point : TYPESPEC IDENTIFIER $$1 '(' ')' '{' xdecls . stmts RETURN CONSTANT ';' '}'  (2)

	IDENTIFIER  shift 14
	IF  shift 15
	WHILE  shift 16
	.  error

	simple_stmt  goto 17
	stmts  goto 18
	stmt  goto 19
	IF_Statement  goto 20
	While_Statement  goto 21


state 10
	xdecls : decls .  (4)
	decls : decls . decl  (6)

	TYPESPEC  shift 8
	IDENTIFIER  reduce 4
	IF  reduce 4
	WHILE  reduce 4
	'}'  reduce 4

	decl  goto 22


state 11
	decls : decl .  (5)

	.  reduce 5


state 12
	notype_declarator : IDENTIFIER . '=' INT_CONSTANT  (8)

	'='  shift 23
	.  error


state 13
	decl : TYPESPEC notype_declarator . ';'  (7)

	';'  shift 24
	.  error


state 14
	simple_stmt : IDENTIFIER . '=' add_expr ';'  (39)

	'='  shift 25
	.  error


state 15
	IF_Statement : IF . '(' Expression ')' $$4 Compound_Statement Selection_Statement_Tail  (21)

	'('  shift 26
	.  error


state 16
	While_Statement : WHILE . $$2 '(' Expression ')' $$3 Compound_Statement  (19)
	$$2 : .  (17)

	.  reduce 17

	$$2  goto 27


state 17
	stmt : simple_stmt .  (14)

	.  reduce 14


state 18
	start_point : TYPESPEC IDENTIFIER $$1 '(' ')' '{' xdecls stmts . RETURN CONSTANT ';' '}'  (2)
	stmts : stmts . stmt  (13)

	IDENTIFIER  shift 14
	IF  shift 15
	WHILE  shift 16
	RETURN  shift 28
	.  error

	simple_stmt  goto 17
	stmt  goto 29
	IF_Statement  goto 20
	While_Statement  goto 21


state 19
	stmts : stmt .  (12)

	.  reduce 12


state 20
	stmt : IF_Statement .  (15)

	.  reduce 15


state 21
	stmt : While_Statement .  (16)

	.  reduce 16


state 22
	decls : decls decl .  (6)

	.  reduce 6


state 23
	notype_declarator : IDENTIFIER '=' . INT_CONSTANT  (8)

	CONSTANT  shift 30
	.  error

	INT_CONSTANT  goto 31


state 24
	decl : TYPESPEC notype_declarator ';' .  (7)

	.  reduce 7


state 25
	simple_stmt : IDENTIFIER '=' . add_expr ';'  (39)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	'('  shift 34
	.  error

	add_expr  goto 35
	mul_expr  goto 36
	primary_expr  goto 37


state 26
	IF_Statement : IF '(' . Expression ')' $$4 Compound_Statement Selection_Statement_Tail  (21)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	NOT_OP  shift 38
	'('  shift 34
	.  error

	add_expr  goto 39
	mul_expr  goto 36
	primary_expr  goto 37
	Expression  goto 40
	Logical_Expression  goto 41


state 27
	While_Statement : WHILE $$2 . '(' Expression ')' $$3 Compound_Statement  (19)

	'('  shift 42
	.  error


state 28
	start_point : TYPESPEC IDENTIFIER $$1 '(' ')' '{' xdecls stmts RETURN . CONSTANT ';' '}'  (2)

	CONSTANT  shift 43
	.  error


state 29
	stmts : stmts stmt .  (13)

	.  reduce 13


state 30
	INT_CONSTANT : CONSTANT .  (9)

	.  reduce 9


state 31
	notype_declarator : IDENTIFIER '=' INT_CONSTANT .  (8)

	.  reduce 8


state 32
	primary_expr : IDENTIFIER .  (46)

	.  reduce 46


state 33
	primary_expr : CONSTANT .  (47)

	.  reduce 47


state 34
	primary_expr : '(' . Expression ')'  (48)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	NOT_OP  shift 38
	'('  shift 34
	.  error

	add_expr  goto 39
	mul_expr  goto 36
	primary_expr  goto 37
	Expression  goto 44
	Logical_Expression  goto 41


state 35
	simple_stmt : IDENTIFIER '=' add_expr . ';'  (39)
	add_expr : add_expr . '+' mul_expr  (41)
	add_expr : add_expr . '-' mul_expr  (42)

	';'  shift 45
	'+'  shift 46
	'-'  shift 47
	.  error


state 36
	add_expr : mul_expr .  (40)
	mul_expr : mul_expr . '*' primary_expr  (44)
	mul_expr : mul_expr . '/' primary_expr  (45)

	'*'  shift 48
	'/'  shift 49
	';'  reduce 40
	LE_OP  reduce 40
	GE_OP  reduce 40
	EQUAL_OP  reduce 40
	NEQUAL_OP  reduce 40
	AND_OP  reduce 40
	OR_OP  reduce 40
	'>'  reduce 40
	'<'  reduce 40
	'+'  reduce 40
	'-'  reduce 40
	')'  reduce 40


state 37
	mul_expr : primary_expr .  (43)

	.  reduce 43


state 38
	Logical_Expression : NOT_OP . Logical_Expression  (32)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	NOT_OP  shift 38
	'('  shift 34
	.  error

	add_expr  goto 39
	mul_expr  goto 36
	primary_expr  goto 37
	Logical_Expression  goto 50


state 39
	Logical_Expression : add_expr .  (29)
	add_expr : add_expr . '+' mul_expr  (41)
	add_expr : add_expr . '-' mul_expr  (42)

	'+'  shift 46
	'-'  shift 47
	LE_OP  reduce 29
	GE_OP  reduce 29
	EQUAL_OP  reduce 29
	NEQUAL_OP  reduce 29
	AND_OP  reduce 29
	OR_OP  reduce 29
	'>'  reduce 29
	'<'  reduce 29
	')'  reduce 29


state 40
	IF_Statement : IF '(' Expression . ')' $$4 Compound_Statement Selection_Statement_Tail  (21)

	')'  shift 51
	.  error


state 41
	Expression : Logical_Expression .  (28)
	Logical_Expression : Logical_Expression . OR_OP add_expr  (30)
	Logical_Expression : Logical_Expression . AND_OP add_expr  (31)
	Logical_Expression : Logical_Expression . '<' add_expr  (33)
	Logical_Expression : Logical_Expression . LE_OP add_expr  (34)
	Logical_Expression : Logical_Expression . '>' add_expr  (35)
	Logical_Expression : Logical_Expression . GE_OP add_expr  (36)
	Logical_Expression : Logical_Expression . EQUAL_OP add_expr  (37)
	Logical_Expression : Logical_Expression . NEQUAL_OP add_expr  (38)

	LE_OP  shift 52
	GE_OP  shift 53
	EQUAL_OP  shift 54
	NEQUAL_OP  shift 55
	AND_OP  shift 56
	OR_OP  shift 57
	'>'  shift 58
	'<'  shift 59
	')'  reduce 28


state 42
	While_Statement : WHILE $$2 '(' . Expression ')' $$3 Compound_Statement  (19)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	NOT_OP  shift 38
	'('  shift 34
	.  error

	add_expr  goto 39
	mul_expr  goto 36
	primary_expr  goto 37
	Expression  goto 60
	Logical_Expression  goto 41


state 43
	start_point : TYPESPEC IDENTIFIER $$1 '(' ')' '{' xdecls stmts RETURN CONSTANT . ';' '}'  (2)

	';'  shift 61
	.  error


state 44
	primary_expr : '(' Expression . ')'  (48)

	')'  shift 62
	.  error


state 45
	simple_stmt : IDENTIFIER '=' add_expr ';' .  (39)

	.  reduce 39


state 46
	add_expr : add_expr '+' . mul_expr  (41)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	'('  shift 34
	.  error

	mul_expr  goto 63
	primary_expr  goto 37


state 47
	add_expr : add_expr '-' . mul_expr  (42)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	'('  shift 34
	.  error

	mul_expr  goto 64
	primary_expr  goto 37


state 48
	mul_expr : mul_expr '*' . primary_expr  (44)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	'('  shift 34
	.  error

	primary_expr  goto 65


state 49
	mul_expr : mul_expr '/' . primary_expr  (45)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	'('  shift 34
	.  error

	primary_expr  goto 66


state 50
	Logical_Expression : Logical_Expression . OR_OP add_expr  (30)
	Logical_Expression : Logical_Expression . AND_OP add_expr  (31)
	Logical_Expression : NOT_OP Logical_Expression .  (32)
	Logical_Expression : Logical_Expression . '<' add_expr  (33)
	Logical_Expression : Logical_Expression . LE_OP add_expr  (34)
	Logical_Expression : Logical_Expression . '>' add_expr  (35)
	Logical_Expression : Logical_Expression . GE_OP add_expr  (36)
	Logical_Expression : Logical_Expression . EQUAL_OP add_expr  (37)
	Logical_Expression : Logical_Expression . NEQUAL_OP add_expr  (38)

	AND_OP  shift 56
	OR_OP  shift 57
	'>'  shift 58
	'<'  shift 59
	LE_OP  reduce 32
	GE_OP  reduce 32
	EQUAL_OP  reduce 32
	NEQUAL_OP  reduce 32
	')'  reduce 32


state 51
	IF_Statement : IF '(' Expression ')' . $$4 Compound_Statement Selection_Statement_Tail  (21)
	$$4 : .  (20)

	.  reduce 20

	$$4  goto 67


state 52
	Logical_Expression : Logical_Expression LE_OP . add_expr  (34)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	'('  shift 34
	.  error

	add_expr  goto 68
	mul_expr  goto 36
	primary_expr  goto 37


state 53
	Logical_Expression : Logical_Expression GE_OP . add_expr  (36)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	'('  shift 34
	.  error

	add_expr  goto 69
	mul_expr  goto 36
	primary_expr  goto 37


state 54
	Logical_Expression : Logical_Expression EQUAL_OP . add_expr  (37)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	'('  shift 34
	.  error

	add_expr  goto 70
	mul_expr  goto 36
	primary_expr  goto 37


state 55
	Logical_Expression : Logical_Expression NEQUAL_OP . add_expr  (38)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	'('  shift 34
	.  error

	add_expr  goto 71
	mul_expr  goto 36
	primary_expr  goto 37


state 56
	Logical_Expression : Logical_Expression AND_OP . add_expr  (31)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	'('  shift 34
	.  error

	add_expr  goto 72
	mul_expr  goto 36
	primary_expr  goto 37


state 57
	Logical_Expression : Logical_Expression OR_OP . add_expr  (30)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	'('  shift 34
	.  error

	add_expr  goto 73
	mul_expr  goto 36
	primary_expr  goto 37


state 58
	Logical_Expression : Logical_Expression '>' . add_expr  (35)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	'('  shift 34
	.  error

	add_expr  goto 74
	mul_expr  goto 36
	primary_expr  goto 37


state 59
	Logical_Expression : Logical_Expression '<' . add_expr  (33)

	IDENTIFIER  shift 32
	CONSTANT  shift 33
	'('  shift 34
	.  error

	add_expr  goto 75
	mul_expr  goto 36
	primary_expr  goto 37


state 60
	While_Statement : WHILE $$2 '(' Expression . ')' $$3 Compound_Statement  (19)

	')'  shift 76
	.  error


state 61
	start_point : TYPESPEC IDENTIFIER $$1 '(' ')' '{' xdecls stmts RETURN CONSTANT ';' . '}'  (2)

	'}'  shift 77
	.  error


state 62
	primary_expr : '(' Expression ')' .  (48)

	.  reduce 48


state 63
	add_expr : add_expr '+' mul_expr .  (41)
	mul_expr : mul_expr . '*' primary_expr  (44)
	mul_expr : mul_expr . '/' primary_expr  (45)

	'*'  shift 48
	'/'  shift 49
	';'  reduce 41
	LE_OP  reduce 41
	GE_OP  reduce 41
	EQUAL_OP  reduce 41
	NEQUAL_OP  reduce 41
	AND_OP  reduce 41
	OR_OP  reduce 41
	'>'  reduce 41
	'<'  reduce 41
	'+'  reduce 41
	'-'  reduce 41
	')'  reduce 41


state 64
	add_expr : add_expr '-' mul_expr .  (42)
	mul_expr : mul_expr . '*' primary_expr  (44)
	mul_expr : mul_expr . '/' primary_expr  (45)

	'*'  shift 48
	'/'  shift 49
	';'  reduce 42
	LE_OP  reduce 42
	GE_OP  reduce 42
	EQUAL_OP  reduce 42
	NEQUAL_OP  reduce 42
	AND_OP  reduce 42
	OR_OP  reduce 42
	'>'  reduce 42
	'<'  reduce 42
	'+'  reduce 42
	'-'  reduce 42
	')'  reduce 42


state 65
	mul_expr : mul_expr '*' primary_expr .  (44)

	.  reduce 44


state 66
	mul_expr : mul_expr '/' primary_expr .  (45)

	.  reduce 45


state 67
	IF_Statement : IF '(' Expression ')' $$4 . Compound_Statement Selection_Statement_Tail  (21)

	'{'  shift 78
	.  error

	Compound_Statement  goto 79


state 68
	Logical_Expression : Logical_Expression LE_OP add_expr .  (34)
	add_expr : add_expr . '+' mul_expr  (41)
	add_expr : add_expr . '-' mul_expr  (42)

	'+'  shift 46
	'-'  shift 47
	LE_OP  reduce 34
	GE_OP  reduce 34
	EQUAL_OP  reduce 34
	NEQUAL_OP  reduce 34
	AND_OP  reduce 34
	OR_OP  reduce 34
	'>'  reduce 34
	'<'  reduce 34
	')'  reduce 34


state 69
	Logical_Expression : Logical_Expression GE_OP add_expr .  (36)
	add_expr : add_expr . '+' mul_expr  (41)
	add_expr : add_expr . '-' mul_expr  (42)

	'+'  shift 46
	'-'  shift 47
	LE_OP  reduce 36
	GE_OP  reduce 36
	EQUAL_OP  reduce 36
	NEQUAL_OP  reduce 36
	AND_OP  reduce 36
	OR_OP  reduce 36
	'>'  reduce 36
	'<'  reduce 36
	')'  reduce 36


state 70
	Logical_Expression : Logical_Expression EQUAL_OP add_expr .  (37)
	add_expr : add_expr . '+' mul_expr  (41)
	add_expr : add_expr . '-' mul_expr  (42)

	'+'  shift 46
	'-'  shift 47
	LE_OP  reduce 37
	GE_OP  reduce 37
	EQUAL_OP  reduce 37
	NEQUAL_OP  reduce 37
	AND_OP  reduce 37
	OR_OP  reduce 37
	'>'  reduce 37
	'<'  reduce 37
	')'  reduce 37


state 71
	Logical_Expression : Logical_Expression NEQUAL_OP add_expr .  (38)
	add_expr : add_expr . '+' mul_expr  (41)
	add_expr : add_expr . '-' mul_expr  (42)

	'+'  shift 46
	'-'  shift 47
	LE_OP  reduce 38
	GE_OP  reduce 38
	EQUAL_OP  reduce 38
	NEQUAL_OP  reduce 38
	AND_OP  reduce 38
	OR_OP  reduce 38
	'>'  reduce 38
	'<'  reduce 38
	')'  reduce 38


state 72
	Logical_Expression : Logical_Expression AND_OP add_expr .  (31)
	add_expr : add_expr . '+' mul_expr  (41)
	add_expr : add_expr . '-' mul_expr  (42)

	'+'  shift 46
	'-'  shift 47
	LE_OP  reduce 31
	GE_OP  reduce 31
	EQUAL_OP  reduce 31
	NEQUAL_OP  reduce 31
	AND_OP  reduce 31
	OR_OP  reduce 31
	'>'  reduce 31
	'<'  reduce 31
	')'  reduce 31


state 73
	Logical_Expression : Logical_Expression OR_OP add_expr .  (30)
	add_expr : add_expr . '+' mul_expr  (41)
	add_expr : add_expr . '-' mul_expr  (42)

	'+'  shift 46
	'-'  shift 47
	LE_OP  reduce 30
	GE_OP  reduce 30
	EQUAL_OP  reduce 30
	NEQUAL_OP  reduce 30
	AND_OP  reduce 30
	OR_OP  reduce 30
	'>'  reduce 30
	'<'  reduce 30
	')'  reduce 30


state 74
	Logical_Expression : Logical_Expression '>' add_expr .  (35)
	add_expr : add_expr . '+' mul_expr  (41)
	add_expr : add_expr . '-' mul_expr  (42)

	'+'  shift 46
	'-'  shift 47
	LE_OP  reduce 35
	GE_OP  reduce 35
	EQUAL_OP  reduce 35
	NEQUAL_OP  reduce 35
	AND_OP  reduce 35
	OR_OP  reduce 35
	'>'  reduce 35
	'<'  reduce 35
	')'  reduce 35


state 75
	Logical_Expression : Logical_Expression '<' add_expr .  (33)
	add_expr : add_expr . '+' mul_expr  (41)
	add_expr : add_expr . '-' mul_expr  (42)

	'+'  shift 46
	'-'  shift 47
	LE_OP  reduce 33
	GE_OP  reduce 33
	EQUAL_OP  reduce 33
	NEQUAL_OP  reduce 33
	AND_OP  reduce 33
	OR_OP  reduce 33
	'>'  reduce 33
	'<'  reduce 33
	')'  reduce 33


state 76
	While_Statement : WHILE $$2 '(' Expression ')' . $$3 Compound_Statement  (19)
	$$3 : .  (18)

	.  reduce 18

	$$3  goto 80


state 77
	start_point : TYPESPEC IDENTIFIER $$1 '(' ')' '{' xdecls stmts RETURN CONSTANT ';' '}' .  (2)

	.  reduce 2


state 78
	Compound_Statement : '{' . $$6 xdecls $$7 stmt_list '}'  (27)
	$$6 : .  (25)

	.  reduce 25

	$$6  goto 81


state 79
	IF_Statement : IF '(' Expression ')' $$4 Compound_Statement . Selection_Statement_Tail  (21)
	Selection_Statement_Tail : .  (22)

	ELSE  shift 82
	IDENTIFIER  reduce 22
	IF  reduce 22
	WHILE  reduce 22
	RETURN  reduce 22
	'}'  reduce 22

	Selection_Statement_Tail  goto 83


state 80
	While_Statement : WHILE $$2 '(' Expression ')' $$3 . Compound_Statement  (19)

	'{'  shift 78
	.  error

	Compound_Statement  goto 84


state 81
	Compound_Statement : '{' $$6 . xdecls $$7 stmt_list '}'  (27)
	xdecls : .  (3)

	TYPESPEC  shift 8
	IDENTIFIER  reduce 3
	IF  reduce 3
	WHILE  reduce 3
	'}'  reduce 3

	xdecls  goto 85
	decls  goto 10
	decl  goto 11


state 82
	Selection_Statement_Tail : ELSE . $$5 Compound_Statement  (24)
	$$5 : .  (23)

	.  reduce 23

	$$5  goto 86


state 83
	IF_Statement : IF '(' Expression ')' $$4 Compound_Statement Selection_Statement_Tail .  (21)

	.  reduce 21


state 84
	While_Statement : WHILE $$2 '(' Expression ')' $$3 Compound_Statement .  (19)

	.  reduce 19


state 85
	Compound_Statement : '{' $$6 xdecls . $$7 stmt_list '}'  (27)
	$$7 : .  (26)

	.  reduce 26

	$$7  goto 87


state 86
	Selection_Statement_Tail : ELSE $$5 . Compound_Statement  (24)

	'{'  shift 78
	.  error

	Compound_Statement  goto 88


state 87
	Compound_Statement : '{' $$6 xdecls $$7 . stmt_list '}'  (27)
	stmt_list : .  (10)

	IDENTIFIER  shift 14
	IF  shift 15
	WHILE  shift 16
	'}'  reduce 10

	simple_stmt  goto 17
	stmts  goto 89
	stmt_list  goto 90
	stmt  goto 19
	IF_Statement  goto 20
	While_Statement  goto 21


state 88
	Selection_Statement_Tail : ELSE $$5 Compound_Statement .  (24)

	.  reduce 24


state 89
	stmt_list : stmts .  (11)
	stmts : stmts . stmt  (13)

	IDENTIFIER  shift 14
	IF  shift 15
	WHILE  shift 16
	'}'  reduce 11

	simple_stmt  goto 17
	stmt  goto 29
	IF_Statement  goto 20
	While_Statement  goto 21


state 90
	Compound_Statement : '{' $$6 xdecls $$7 stmt_list . '}'  (27)

	'}'  shift 91
	.  error


state 91
	Compound_Statement : '{' $$6 xdecls $$7 stmt_list '}' .  (27)

	.  reduce 27


Rules never reduced:
	primary : IDENTIFIER  (49)
	primary : CONSTANT  (50)


86 terminals, 28 nonterminals
51 grammar rules, 92 states
